--- a/apps/gpa-calculator/index.html
+++ b/apps/gpa-calculator/index.html
@@ -17,17 +17,17 @@
       >
 
       <!-- Overlay content -->
-      <form class="overlay-content text-white flex flex-col">
-        <p class="text-white text-sm mt-4">These actions refresh the page.</p>
+      <form class="overlay-content flex flex-col text-white">
+        <p class="mt-4 text-sm text-white">These actions refresh the page.</p>
         <button
-          class="text-white m-2"
+          class="m-2 text-white"
           type="submit"
           id="clearDataButton"
           onclick="clearData()"
         >
           Clear Grade Data
         </button>
-        <button class="text-white m-2" type="submit" onclick="clearAll()">
+        <button class="m-2 text-white" type="submit" onclick="clearAll()">
           Clear All Site Data
         </button>
       </form>
@@ -35,18 +35,18 @@
 
     <div class="main">
       <div
-        class="grid grid-cols-6 gap-4 lg:w-1/3 lg:p-2 p-8 bg-black text-white border borderwhite border-t-0 border-l-0 border-r-0 border-b-1"
+        class="borderwhite border-b-1 grid grid-cols-6 gap-4 border border-l-0 border-r-0 border-t-0 bg-black p-8 text-white lg:w-1/3 lg:p-2"
       >
         <button
           type="button"
           onclick="toggleNav(true)"
-          class="pb-8 text-xl text-white rounded-full w-8 h-8"
+          class="h-8 w-8 rounded-full pb-8 text-xl text-white"
         >
           ☰
         </button>
 
         <h5
-          class="col-start-2 col-span-4 align-middle text-center text-3xl"
+          class="col-span-4 col-start-2 text-center align-middle text-3xl"
           id="gradeLvl"
         >
           Middle School
@@ -68,9 +68,9 @@
     </div>
 
     <header id="myHeader"></header>
-    <div class="lg:pb-8 lg:flex h-full text-white">
+    <div class="h-full text-white lg:flex lg:pb-8">
       <div
-        class="basis-1/3 lg:rounded-br-lg lg:px-10 lg:pt-8 p-8 bg-black lg:h-screen"
+        class="basis-1/3 bg-black p-8 lg:h-screen lg:rounded-br-lg lg:px-10 lg:pt-8"
       >
         <h5>How to use!</h5>
         <p id="Directions">
@@ -87,11 +87,11 @@
             type="number"
             placeholder="Number of Classes"
             id="numOfClasses"
-            class="text-black rounded-sm mt-3 pl-1"
+            class="mt-3 rounded-sm pl-1 text-black"
           />
           <button
             onclick="classAmount()"
-            class="text-black px-1 rounded-sm"
+            class="rounded-sm px-1 text-black"
             type="submit"
           >
             Submit
@@ -99,11 +99,11 @@
         </form>
       </div>
 
-      <div class="lg:w-2/3 lg:px-16 px-4 lg:p-8 p-4" id="c">
+      <div class="p-4 px-4 lg:w-2/3 lg:p-8 lg:px-16" id="c">
         <h5>Grades:</h5>
         <div id="temp1"></div>
         <div
-          class="lg:drop-shadow-2xl lg:fixed static lg:right-16 lg:bottom-16 p-4 bg-black rounded-lg text-white"
+          class="static rounded-lg bg-black p-4 text-white lg:fixed lg:bottom-16 lg:right-16 lg:drop-shadow-2xl"
         >
           <h2 id="gpa">No Data</h2>
         </div>
