--- a/apps/gpa-calculator/index.html
+++ b/apps/gpa-calculator/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width" />
     <title>GPA Calculator</title>
     <script type="module" src="/src/script.ts"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-[url('/bground.png')]" onload="startApp()">
     <!-- The overlay -->
@@ -35,7 +34,7 @@
 
     <div class="main">
       <div
-        class="borderwhite border-b-1 grid grid-cols-6 gap-4 border border-l-0 border-r-0 border-t-0 bg-black p-8 text-white lg:w-1/3 lg:p-2"
+        class="border-b-1 grid grid-cols-6 gap-4 border border-l-0 border-r-0 border-t-0 bg-black p-8 text-white lg:w-1/3 lg:p-2"
       >
         <button
           type="button"
@@ -87,11 +86,11 @@
             type="number"
             placeholder="Number of Classes"
             id="numOfClasses"
-            class="mt-3 rounded-sm pl-1 text-black"
+            class="rounded-xs mt-3 pl-1 text-black"
           />
           <button
             onclick="classAmount()"
-            class="rounded-sm px-1 text-black"
+            class="rounded-xs px-1 text-black"
             type="submit"
           >
             Submit
